--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,13 @@
     "gulp-sass": "^6.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-modal": "^3.16.3",
     "react-scripts": "5.0.1",
     "sass": "^1.87.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "sass":"gulp watch",
+    "sass": "gulp watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
