--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-modal": "^3.16.3",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "sass": "^1.87.0",
     "web-vitals": "^2.1.4"
