--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-modal": "^3.16.3",
+    "react-redux": "^9.2.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.87.0",
     "web-vitals": "^2.1.4"
   },
